# template_rust_web_api

./: .containerignore  .dockerignore  Cargo.toml  Containerfile.release  Containerfile.web  DEVDOC.md  Dockerfile.web  README.md  api.oas3.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  sqlx-data.json
.cargo/: config.toml
crates/dylink/: Cargo.toml  lib.rs
crates/xtask/: Cargo.toml  main.rs
fixtures/: 000_test_data.sql
migrations/: 20220809004043_utilities.sql  20220809005249_create_user_table.sql  20220809005249_create_user_tables.sql  20220817154730_create_credentials_tables.sql.sql  20220905095757_create_create_user_function.sql  20220905130113_create_sessions_tables.sql  20220917161014_create_update_user_function.sql  20220919145558_create_delete_user_function.sql
src/: auth.rs  lib.rs  macros.rs  main.rs  user.rs  utils.rs
src/auth/: authenticate.rs  authorize.rs
src/user/: create.rs  delete.rs  get.rs  list.rs  update.rs
src/utils/: list_request.rs  testing.rs  validation_errs.rs
