[package]
name = "template_web_api_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[features]
default = ["dylink"]

[dependencies]
deps = { path = "crates/deps" }
dylink = { path = "crates/dylink", optional = true }
sqlx = { version = "0.6.1", features = [
        "postgres",
        "runtime-tokio-rustls",
        "time",
        "uuid",
        "macros",
        "json",
        "migrate",
        "offline"
] }

[profile.dev]
# debug = false

# builds dependeinces with release optimizations
[profile.dev.package."*"]
# opt-level = 3

[patch.crates-io]
utoipa = { git = "https://github.com/juhaku/utoipa" }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa" }
# utoipa = { path = "../utoipa" }
# utoipa-swagger-ui = { path = "../utoipa" }
