[package]
name = "template_rust_web_api"
description = "Opinionated template repository for an HTTP API."
version = "0.1.0"
edition = "2021"
default-run = "web"

[[bin]]
name = "web"
test = false
bench = false

[[bin]]
name = "print_oas"
test = false
bench = false

[workspace]
members = ["crates/*"]

[features]
default = ["dylink"]

[dependencies]
deps = { path = "crates/deps" }
dylink = { path = "crates/dylink", optional = true }
shadow-rs = "0.16.3"
# the following contain macros that don't like being re-exported
validator = { version = "0.16.0", features = ["derive"] }
sqlx = { version = "0.6.1", features = [
        "postgres",
        "runtime-tokio-rustls",
        "time",
        "uuid",
        "macros",
        "json",
        "migrate",
        "offline"
] }

[profile.dev]
# debug = false

# builds dependeinces with release optimizations
[profile.dev.package."*"]
# opt-level = 3

[patch.crates-io]

[build-dependencies]
shadow-rs = "0.16.3"
# utoipa = { git = "https://github.com/juhaku/utoipa", rev = "6431c28" }
# utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa", rev = "6431c28" }
# utoipa = { path = "../utoipa" }
# utoipa-swagger-ui = { path = "../utoipa" }
